handle lock screen via xss-autolock
This commit corresponds to github.com/jzacsh/bin/commit/d4ab4f2a9089 changes

--- a/.config/autostart/autolock-i3.desktop
+++ b/.config/autostart/autolock-i3.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Type=Application
 Name=i3-autolock
-Exec=/home/jzacsh/bin/share/i3-autolock 3
+Exec=/home/jzacsh/bin/share/i3-autolock 180 300
 OnlyShowIn=i3
